--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,5 +8,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 body {
-    background-color: aqua;
+    background-image: url(../../public/img/background.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
 }
