--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,15 @@ body {
     background-repeat: no-repeat;
     background-position: center;
 }
+
+.temperature {
+    float: left;
+    font-size: x-large;
+    font-weight: bold;
+    margin-top: 45px;
+}
+
+.icon {
+    display: inline-block;
+    margin-left: 30px;
+}
